--- a/src/components/chat-bubble/chat-bubble.styles.scss
+++ b/src/components/chat-bubble/chat-bubble.styles.scss
@@ -1,11 +1,17 @@
+$width: 50px;
+$height: 50px;
+
 .chat-bubble{
     border: 1px solid white;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: $width;
+    height: $height;
     text-align: center;
     background-color: rgba(0,0,0,0.4);
-
+    position: relative;
+    top: calc(100% - #{$height});
+    left: calc(100% - #{$width});
+    
     &-icon{
         font-size: 200%;
         font-size-adjust: inherit;
