Added util file to grap avatar image from API, conditional styling for header during chat (needs to be fully implemented), general styling for chat window

--- a/src/components/chat-box-container/chat-box.container.styles.scss
+++ b/src/components/chat-box-container/chat-box.container.styles.scss
@@ -10,6 +10,11 @@ $height: 300px;
     left: calc(100% - #{$width} - 10px);
 }
 
+.chat-box-content{
+    overflow-y: scroll;
+    overflow-x:hidden;
+    height: calc(#{$height} - 10px);
+}
     
 .visible-chat{
     background-color: rgba(255, 255, 255, 0.93);
