Styled chat box, added input container, styled chat messages

--- a/src/components/chat-box-container/chat-box.container.styles.scss
+++ b/src/components/chat-box-container/chat-box.container.styles.scss
@@ -11,9 +11,9 @@ $height: 300px;
 }
 
 .chat-box-content{
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x:hidden;
-    height: calc(#{$height} - 10px);
+    height: calc(#{$height});
 }
     
 .visible-chat{
