--- a/src/components/chat-box/chat-box.styles.scss
+++ b/src/components/chat-box/chat-box.styles.scss
@@ -1,2 +1,7 @@
 .chat-box{
+    overflow-y: auto;
+    height: calc(100% - 84px);
+    margin-top: 42px;
+    position: relative;
+    top:-42px;
 }
