--- a/src/components/chat-box-container/chat-box.container.styles.scss
+++ b/src/components/chat-box-container/chat-box.container.styles.scss
@@ -1,7 +1,7 @@
 $width:200px;
 $height: 300px;
 .chat-box-container{
-    border:1px solid red;
+    // border:1px solid red;
     width: $width;
     height: $height;
     position: absolute;
