Added word wrap for message component span to prevent overflow

--- a/src/components/chat-box/chat-box.styles.scss
+++ b/src/components/chat-box/chat-box.styles.scss
@@ -1,5 +1,6 @@
 .chat-box{
     overflow-y: auto;
+    overflow-x: hidden;
     height: calc(100% - 84px);
     margin-top: 42px;
     position: relative;
